--- a/ipy_notebooks/iterative_coordinate_analysis.ipynb
+++ b/ipy_notebooks/iterative_coordinate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_dec_14'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_parent_folder = \"multi_cam_nov_14\"\n",
+    "_parent_folder = \"single_cam_dec_14\"\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\", _parent_folder)\n",
     "_base_pth"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -82,107 +82,293 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sk16_15_forward_fast</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk18_30_sideways_fast_2</td>\n",
+       "      <td>calibration_30fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sk16_15_forward_fast_2</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk18_30_sideways_medium</td>\n",
+       "      <td>calibration_30fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>sk16_15_forward_medium</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk18_30_sideways_medium_2</td>\n",
+       "      <td>calibration_30fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>sk16_15_forward_medium_2</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk18_30_sideways_slow</td>\n",
+       "      <td>calibration_30fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>sk16_15_forward_slow</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk18_30_sideways_slow_2</td>\n",
+       "      <td>calibration_30fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>sk16_60_sideways_fast_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>5</th>\n",
+       "      <td>sk18_60_forward_fast</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>sk16_60_sideways_medium</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>6</th>\n",
+       "      <td>sk18_60_forward_fast_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>sk16_60_sideways_medium_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>7</th>\n",
+       "      <td>sk18_60_forward_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>sk16_60_sideways_slow</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>8</th>\n",
+       "      <td>sk18_60_forward_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>sk16_60_sideways_slow_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>9</th>\n",
+       "      <td>sk18_60_forward_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>sk18_60_forward_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>sk18_60_quad_fast</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>sk18_60_quad_fast_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>sk18_60_quad_fast_rotation</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>sk18_60_quad_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>sk18_60_quad_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>sk18_60_quad_medium_rotation</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>sk18_60_quad_medium_rotation_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>sk18_60_quad_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>sk18_60_quad_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>sk18_60_quad_slow_rotation</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>sk18_60_quad_slow_rotation_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>sk18_60_random_fast</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>sk18_60_random_fast_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>sk18_60_random_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>sk18_60_random_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>sk18_60_random_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>sk18_60_random_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>sk18_60_rotation_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>sk18_60_rotation_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>sk18_60_rotation_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>sk18_60_rotation_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>sk18_60_sideways_fast</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>sk18_60_sideways_fast_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>sk18_60_sideways_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>sk18_60_sideways_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>sk18_60_sideways_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>sk18_60_sideways_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>89 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  folder_name           calibration_folder   flip\n",
-       "0        sk16_15_forward_fast         calibration_15fps_sk  False\n",
-       "1      sk16_15_forward_fast_2         calibration_15fps_sk  False\n",
-       "2      sk16_15_forward_medium         calibration_15fps_sk  False\n",
-       "3    sk16_15_forward_medium_2         calibration_15fps_sk  False\n",
-       "4        sk16_15_forward_slow         calibration_15fps_sk  False\n",
-       "..                        ...                          ...    ...\n",
-       "84    sk16_60_sideways_fast_2  calibration_60fps_quad_sk_3  False\n",
-       "85    sk16_60_sideways_medium  calibration_60fps_quad_sk_3  False\n",
-       "86  sk16_60_sideways_medium_2  calibration_60fps_quad_sk_3  False\n",
-       "87      sk16_60_sideways_slow  calibration_60fps_quad_sk_3  False\n",
-       "88    sk16_60_sideways_slow_2  calibration_60fps_quad_sk_3  False\n",
-       "\n",
-       "[89 rows x 3 columns]"
+       "                       folder_name    calibration_folder   flip\n",
+       "0          sk18_30_sideways_fast_2  calibration_30fps_00  False\n",
+       "1          sk18_30_sideways_medium  calibration_30fps_00  False\n",
+       "2        sk18_30_sideways_medium_2  calibration_30fps_00  False\n",
+       "3            sk18_30_sideways_slow  calibration_30fps_00  False\n",
+       "4          sk18_30_sideways_slow_2  calibration_30fps_00  False\n",
+       "5             sk18_60_forward_fast  calibration_60fps_00  False\n",
+       "6           sk18_60_forward_fast_2  calibration_60fps_00  False\n",
+       "7           sk18_60_forward_medium  calibration_60fps_00  False\n",
+       "8         sk18_60_forward_medium_2  calibration_60fps_00  False\n",
+       "9             sk18_60_forward_slow  calibration_60fps_00  False\n",
+       "10          sk18_60_forward_slow_2  calibration_60fps_00  False\n",
+       "11               sk18_60_quad_fast  calibration_60fps_00  False\n",
+       "12             sk18_60_quad_fast_2  calibration_60fps_00  False\n",
+       "13      sk18_60_quad_fast_rotation  calibration_60fps_00  False\n",
+       "14             sk18_60_quad_medium  calibration_60fps_00  False\n",
+       "15           sk18_60_quad_medium_2  calibration_60fps_00  False\n",
+       "16    sk18_60_quad_medium_rotation  calibration_60fps_00  False\n",
+       "17  sk18_60_quad_medium_rotation_2  calibration_60fps_00  False\n",
+       "18               sk18_60_quad_slow  calibration_60fps_00  False\n",
+       "19             sk18_60_quad_slow_2  calibration_60fps_00  False\n",
+       "20      sk18_60_quad_slow_rotation  calibration_60fps_00  False\n",
+       "21    sk18_60_quad_slow_rotation_2  calibration_60fps_00  False\n",
+       "22             sk18_60_random_fast  calibration_60fps_00  False\n",
+       "23           sk18_60_random_fast_2  calibration_60fps_00  False\n",
+       "24           sk18_60_random_medium  calibration_60fps_00  False\n",
+       "25         sk18_60_random_medium_2  calibration_60fps_00  False\n",
+       "26             sk18_60_random_slow  calibration_60fps_00  False\n",
+       "27           sk18_60_random_slow_2  calibration_60fps_00  False\n",
+       "28         sk18_60_rotation_medium  calibration_60fps_00  False\n",
+       "29       sk18_60_rotation_medium_2  calibration_60fps_00  False\n",
+       "30           sk18_60_rotation_slow  calibration_60fps_00  False\n",
+       "31         sk18_60_rotation_slow_2  calibration_60fps_00  False\n",
+       "32           sk18_60_sideways_fast  calibration_60fps_00  False\n",
+       "33         sk18_60_sideways_fast_2  calibration_60fps_00  False\n",
+       "34         sk18_60_sideways_medium  calibration_60fps_00  False\n",
+       "35       sk18_60_sideways_medium_2  calibration_60fps_00  False\n",
+       "36           sk18_60_sideways_slow  calibration_60fps_00  False\n",
+       "37         sk18_60_sideways_slow_2  calibration_60fps_00  False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\" read excel sheet\"\"\"\n",
-    "folder_df = pd.read_excel(os.path.join(_base_pth, \"00_analysis\", \"calibration_files_corrected.xlsx\"))\n",
+    "folder_df = pd.read_excel(os.path.join(_base_pth, \"00_analysis\", \"calibration_files_1.xlsx\"))\n",
     "_analysis_pth = os.path.join(_base_pth, \"00_analysis\")\n",
     "folder_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 89/89 [17:52<00:00, 12.05s/it]\n"
+      "100%|██████████| 38/38 [10:03<00:00, 15.87s/it]\n"
      ]
     }
    ],
@@ -290,9 +476,9 @@
     "    w_df = interpolate_target_df(w_df, _m_df)\n",
     "\n",
     "    # write to csv file\n",
-    "    _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc_2\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
     "    # write to csv file\n",
-    "    w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_webcam_wot_2\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_ar\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
     "\n",
     "    error_df = pd.DataFrame()\n",
     "    error_df[\"time\"] = _m_df[\"time\"]\n",
@@ -904,7 +1090,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('mira')",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -918,12 +1104,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
