--- a/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
+++ b/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
@@ -272,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mira",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -286,12 +286,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13 (default, Mar 28 2022, 08:03:21) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
