changes par for needs to be fixed

--- a/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
+++ b/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_jan_5_2023_3cm\\\\calibration_15fps_00'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "_parent_folder = \"single_cam_dec_14\"\n",
+    "_parent_folder = \"single_cam_jan_5_2023_3cm\"\n",
     "_calib_filename = \"calibration_15fps_00\"\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\")\n",
@@ -39,22 +50,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "_recorded_folder_list = os.listdir(os.path.join(_base_pth, _parent_folder))\n",
     "_txt_pth = os.path.join(_base_pth, _parent_folder,\"00_analysis\", \"folder_list.txt\")\n",
-    "# with open(_txt_pth, \"w\") as f:\n",
-    "#     for i in _recorded_folder_list:\n",
-    "#         f.write(i + \"\\n\")"
+    "with open(_txt_pth, \"w\") as f:\n",
+    "    for i in _recorded_folder_list:\n",
+    "        f.write(i + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "camera matrix [[844.83674494   0.         365.27912269]\n",
+      " [  0.         845.06800186 278.18340944]\n",
+      " [  0.           0.           1.        ]]\n",
+      "distortion [[ 0.10971316 -0.93022571  0.01346217  0.00527896  1.47791377]]\n"
+     ]
+    }
+   ],
    "source": [
     "#calibration path\n",
     "_webcam_calib_pth = os.path.join(_calib_pth, \"webcam_calibration.msgpack\")\n",
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cores 12\n"
+     ]
+    }
+   ],
    "source": [
     "# available cores\n",
     "print(\"cores\", multiprocessing.cpu_count())\n",
@@ -286,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13 (default, Mar 28 2022, 08:03:21) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
