--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_jan_5_2023_3cm\\\\calibration_15fps_00\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_jan_5_2023_3cm\\\\calibration_60fps_00\\\\webcam_color.msgpack'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "_parent_folder = \"single_cam_jan_5_2023_3cm\"\n",
-    "_folder_name = \"calibration_15fps_00\"\n",
+    "_folder_name = \"calibration_60fps_00\"\n",
     "\n",
     "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",_parent_folder, _folder_name,\"webcam_color.msgpack\")\n",
     "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_timestamp.msgpack\")\n",
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 594/594 [00:01<00:00, 436.78it/s]\n"
+      "100%|██████████| 2897/2897 [00:01<00:00, 1861.23it/s]\n"
      ]
     },
     {
@@ -64,32 +64,25 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1767, 1, 4, 2)\n",
+      "corners_list:  (1707, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[844.83674494   0.         365.27912269]\n",
-      " [  0.         845.06800186 278.18340944]\n",
+      " [[862.93861259   0.         375.7584209 ]\n",
+      " [  0.         866.33629563 266.6789032 ]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 0.10971316 -0.93022571  0.01346217  0.00527896  1.47791377]]\n"
+      " [[ 0.11765598 -0.70192854  0.00806251  0.01021081 -0.44850904]]\n"
      ]
     }
    ],
    "source": [
     "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = False, cvt_color=False, saving_name = \"webcam_calibration\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('gs')",
+   "display_name": "amd",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +101,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+    "hash": "f7b5cde20a443c2b17446bd8bc340c41b205a603133068520caed36857fb2eca"
    }
   }
  },
