--- a/ipy_notebooks/iterative_coordinate_analysis.ipynb
+++ b/ipy_notebooks/iterative_coordinate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_jan_5_2023_3cm'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_parent_folder = \"multi_cam_nov_14\"\n",
+    "_parent_folder = \"single_cam_jan_5_2023_3cm\"\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\", _parent_folder)\n",
     "_base_pth"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,32 +82,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sk16_15_forward_fast</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk20_15_forward_fast</td>\n",
+       "      <td>calibration_15fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>sk16_15_forward_fast_2</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk20_15_forward_fast_2</td>\n",
+       "      <td>calibration_15fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>sk16_15_forward_medium</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk20_15_forward_medium</td>\n",
+       "      <td>calibration_15fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>sk16_15_forward_medium_2</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk20_15_forward_medium_2</td>\n",
+       "      <td>calibration_15fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>sk16_15_forward_slow</td>\n",
-       "      <td>calibration_15fps_sk</td>\n",
+       "      <td>sk20_15_forward_slow</td>\n",
+       "      <td>calibration_15fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,72 +117,72 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>sk16_60_sideways_fast_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>91</th>\n",
+       "      <td>sk20_60_sideways_fast_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>sk16_60_sideways_medium</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>92</th>\n",
+       "      <td>sk20_60_sideways_medium</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>sk16_60_sideways_medium_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>93</th>\n",
+       "      <td>sk20_60_sideways_medium_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>sk16_60_sideways_slow</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>94</th>\n",
+       "      <td>sk20_60_sideways_slow</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>sk16_60_sideways_slow_2</td>\n",
-       "      <td>calibration_60fps_quad_sk_3</td>\n",
+       "      <th>95</th>\n",
+       "      <td>sk20_60_sideways_slow_2</td>\n",
+       "      <td>calibration_60fps_00</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>89 rows × 3 columns</p>\n",
+       "<p>96 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  folder_name           calibration_folder   flip\n",
-       "0        sk16_15_forward_fast         calibration_15fps_sk  False\n",
-       "1      sk16_15_forward_fast_2         calibration_15fps_sk  False\n",
-       "2      sk16_15_forward_medium         calibration_15fps_sk  False\n",
-       "3    sk16_15_forward_medium_2         calibration_15fps_sk  False\n",
-       "4        sk16_15_forward_slow         calibration_15fps_sk  False\n",
-       "..                        ...                          ...    ...\n",
-       "84    sk16_60_sideways_fast_2  calibration_60fps_quad_sk_3  False\n",
-       "85    sk16_60_sideways_medium  calibration_60fps_quad_sk_3  False\n",
-       "86  sk16_60_sideways_medium_2  calibration_60fps_quad_sk_3  False\n",
-       "87      sk16_60_sideways_slow  calibration_60fps_quad_sk_3  False\n",
-       "88    sk16_60_sideways_slow_2  calibration_60fps_quad_sk_3  False\n",
+       "                  folder_name    calibration_folder   flip\n",
+       "0        sk20_15_forward_fast  calibration_15fps_00  False\n",
+       "1      sk20_15_forward_fast_2  calibration_15fps_00  False\n",
+       "2      sk20_15_forward_medium  calibration_15fps_00  False\n",
+       "3    sk20_15_forward_medium_2  calibration_15fps_00  False\n",
+       "4        sk20_15_forward_slow  calibration_15fps_00  False\n",
+       "..                        ...                   ...    ...\n",
+       "91    sk20_60_sideways_fast_2  calibration_60fps_00  False\n",
+       "92    sk20_60_sideways_medium  calibration_60fps_00  False\n",
+       "93  sk20_60_sideways_medium_2  calibration_60fps_00  False\n",
+       "94      sk20_60_sideways_slow  calibration_60fps_00  False\n",
+       "95    sk20_60_sideways_slow_2  calibration_60fps_00  False\n",
        "\n",
-       "[89 rows x 3 columns]"
+       "[96 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\" read excel sheet\"\"\"\n",
-    "folder_df = pd.read_excel(os.path.join(_base_pth, \"00_analysis\", \"calibration_files_corrected.xlsx\"))\n",
+    "folder_df = pd.read_excel(os.path.join(_base_pth, \"00_analysis\", \"calibration_files.xlsx\"))\n",
     "_analysis_pth = os.path.join(_base_pth, \"00_analysis\")\n",
     "folder_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +290,9 @@
     "    w_df = interpolate_target_df(w_df, _m_df)\n",
     "\n",
     "    # write to csv file\n",
-    "    _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc_2\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    _m_df.to_csv(os.path.join(_analysis_pth, \"coordinates_mc\", folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
     "    # write to csv file\n",
-    "    w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_webcam_wot_2\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
+    "    w_df.to_csv(os.path.join(_analysis_pth, \"coordinates_webcam_wot\",folder_df.folder_name[folder_no] + \".csv\"), index=False)\n",
     "\n",
     "    error_df = pd.DataFrame()\n",
     "    error_df[\"time\"] = _m_df[\"time\"]\n",
@@ -904,7 +904,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('mira')",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -918,12 +918,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
