--- a/ipy_notebooks/df_test.ipynb
+++ b/ipy_notebooks/df_test.ipynb
@@ -2,135 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.signal import savgol_filter\n",
     "import numpy as np\n",
-    "import polars as pl"
+    "import pandas as pd\n",
+    "from more_itertools import locate\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy import random \n",
-    "# using random.sample()\n",
-    "# to generate random number list\n",
-    "res = np.random.randint(low = -5.5,high=5.5,size=1000)\n",
-    "res"
+    "def read_rigid_body_csv(_pth):\n",
+    "    \"\"\"\n",
+    "    _pth: path to the rigid body file\n",
+    "    \"\"\"\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\recording_programs\\test_data\\sensor_jan_13_2023\\sk21\\sk21_forward_t0.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'alias'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3306770285.py, line 26)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7812\\3022463311.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m )\n\u001b[0;32m      8\u001b[0m df.with_columns([\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[1;33m(\u001b[0m\u001b[0msavgol_filter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m51\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malias\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[1;33m(\u001b[0m\u001b[0msavgol_filter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m51\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malias\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;33m(\u001b[0m\u001b[0msavgol_filter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m51\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malias\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'alias'"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\CMC\\AppData\\Local\\Temp\\ipykernel_24312\\3306770285.py\"\u001b[1;36m, line \u001b[1;32m26\u001b[0m\n\u001b[1;33m    _rb_pos_idx = [x for x in _rotation_ids _rb_pos_idx.remove(x)]\u001b[0m\n\u001b[1;37m                                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "df = pl.DataFrame(\n",
-    "     {\n",
-    "         'x': res, \n",
-    "         \"y\":res, \n",
-    "         \"z\":res,\n",
-    "     }\n",
-    ")\n",
-    "df.with_columns([\n",
-    "        (savgol_filter(df, 51, 1)).alias(\"x\"),\n",
-    "        (savgol_filter(df, 51, 1)).alias(\"x\"),\n",
-    "        (savgol_filter(df, 51, 1)).alias(\"x\"),\n",
-    "])"
+    "df = pd.read_csv(_pth, skiprows=2, header=None)\n",
+    "_marker_type = []\n",
+    "for idx in df.columns:\n",
+    "    _marker_type.append(df[idx][0])\n",
+    "\n",
+    "def find_indices(list_to_check, item_to_find):\n",
+    "    indices = locate(list_to_check, lambda x: x == item_to_find)\n",
+    "    return list(indices)\n",
+    "    \n",
+    "_rb_idx = find_indices(_marker_type, \"Rigid Body\")\n",
+    "_rb_marker_idx = find_indices(_marker_type, \"Rigid Body Marker\")\n",
+    "_marker_idx = find_indices(_marker_type, \"Marker\")\n",
+    "\n",
+    "_rb_idx.sort()\n",
+    "_rb_marker_idx.sort()\n",
+    "_marker_idx.sort()\n",
+    "\n",
+    "_rb_df = df.copy(deep=True)\n",
+    "_rb_df = df[1:]\n",
+    "_analysis_type = list(_rb_df.iloc[2].values)\n",
+    "\n",
+    "_rotation_ids = find_indices(_analysis_type, \"Rotation\")\n",
+    "_rotation_ids.sort()\n",
+    "\n",
+    "_rb_pos_idx = _rb_idx\n",
+    "# _rb_pos_idx = [x for x in _rotation_ids _rb_pos_idx.remove(x)]\n",
+    "\n",
+    "\n",
+    "_rb_pos_idx\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4,  0,  0,  1, -1, -3,  2,  1,  0, -3,  0,  2, -5, -2,  2, -5,  4,\n",
-       "        1, -4,  4,  2,  3,  1,  3, -4, -4,  0,  1,  0, -2,  0, -5,  2, -2,\n",
-       "        0,  1, -4,  2, -2,  3,  0, -2,  3, -4, -3,  3,  3, -5,  1,  0,  0,\n",
-       "       -3,  2, -3, -4,  0, -1, -2,  1, -1, -3, -5, -3,  1, -4,  2,  3,  4,\n",
-       "        1, -5, -3,  0,  4,  4,  3,  0,  3,  4,  2, -4,  2,  1, -5,  2,  2,\n",
-       "       -4, -5,  4,  4, -1, -2,  0,  0, -4, -1,  1, -5,  4,  4, -1, -2, -4,\n",
-       "        1,  1,  4,  0,  2,  4,  3,  2, -3,  0,  0,  3,  4, -2, -5,  2, -5,\n",
-       "        4,  3, -1,  2,  1, -1,  3, -5,  1,  1,  3,  4,  4, -4, -1,  4,  2,\n",
-       "        1,  2,  3, -1,  4,  3, -3, -3,  4, -1, -2, -3, -3, -2,  4,  1, -4,\n",
-       "       -1,  4, -3,  4,  2,  1,  1, -2,  0, -4, -2, -3, -4, -5,  2,  2,  0,\n",
-       "        2, -1,  1, -3, -1, -5, -3,  4, -1, -1, -2,  4,  3,  1,  1,  1,  4,\n",
-       "       -4,  2, -4, -5, -3,  0, -3,  0,  1,  0,  2, -5,  3, -4,  3,  0, -2,\n",
-       "       -2,  3, -2, -5, -1,  4, -1,  0,  4, -2, -5, -5, -3,  3,  2,  1, -1,\n",
-       "       -1,  3,  3, -1, -5, -2, -1,  4, -4, -4, -5, -4, -1, -4, -1, -4,  2,\n",
-       "        0, -2,  4, -2,  3,  1,  1, -4, -3, -3, -1,  3, -3,  1,  0,  1, -4,\n",
-       "        0, -1, -4,  1,  3, -4,  2,  3, -4, -4, -4,  3, -3,  3,  1,  2,  4,\n",
-       "       -4,  1, -1, -5, -4,  0, -4,  3, -4,  4,  3, -3,  3,  0, -1,  0,  2,\n",
-       "        0, -5, -3,  2, -4,  4, -5, -4,  3,  2,  3,  1,  2, -5,  3,  1, -3,\n",
-       "        4, -3, -4,  0, -4,  4,  4, -2, -1,  2,  0, -5, -4,  0,  3, -1, -4,\n",
-       "        3,  3,  4,  2, -4,  4, -4, -5,  1,  3, -2,  4, -4,  1,  4,  4,  0,\n",
-       "       -2, -5,  1, -1, -4, -1, -5,  4,  3,  4, -1, -1,  2, -1, -4, -3,  0,\n",
-       "        1,  4, -5, -3, -1, -4, -5,  2,  4, -2, -2,  2,  0, -4,  3, -2, -5,\n",
-       "       -1, -4,  4, -2, -3,  0, -3, -3,  2,  3, -4,  0,  3,  2, -4, -4, -1,\n",
-       "       -3,  0, -4, -4, -4,  1,  4,  4, -4,  0, -2, -1,  0, -3, -5,  3, -1,\n",
-       "       -4, -5, -4, -4, -4,  0, -3, -5, -5, -3, -5, -4,  1,  1, -1,  1,  2,\n",
-       "       -3,  4, -2,  2,  3,  3,  4, -2, -5, -5,  1, -5,  0,  4, -5, -3,  0,\n",
-       "        3, -5,  1,  2,  2, -5, -4, -5, -3, -4,  4, -1,  1, -4, -4,  4,  1,\n",
-       "        4, -3, -1,  4, -2, -4,  1, -1, -5, -1,  4, -3,  3,  3,  3, -5,  3,\n",
-       "        1, -4,  3, -4,  0,  3, -2,  2, -4,  1,  3,  0,  3,  0,  1,  0,  3,\n",
-       "       -1,  0,  2,  4, -3,  3,  1,  1,  0, -4,  2, -4,  4, -5,  4,  1,  0,\n",
-       "        3,  2,  2, -1, -3,  4, -1, -2, -1,  1,  1,  1,  2, -5,  0,  2,  2,\n",
-       "       -1, -3, -3,  4,  2, -1,  1,  4,  2, -4,  1, -4, -4,  2,  2, -3, -5,\n",
-       "       -1, -5,  1, -2,  3, -4, -1, -2,  1, -1, -5,  3,  3,  4,  0, -5,  2,\n",
-       "       -4, -4, -4, -4,  2,  2,  0, -4, -1, -1,  0,  4,  2,  4, -5, -1,  3,\n",
-       "       -4,  3, -4,  3, -5, -2,  0, -3,  1, -4, -3, -5,  0, -3, -5,  3,  1,\n",
-       "       -1, -2, -3,  4,  2,  2,  1,  4,  4, -2, -3,  2, -3,  3,  4, -1, -2,\n",
-       "        0,  2, -3,  0, -3,  2,  2, -5, -5,  3, -4, -3,  3, -4,  1,  4, -3,\n",
-       "        1,  1, -5, -2, -4,  3,  2, -3,  1,  4,  3,  3, -2, -3,  3, -3,  1,\n",
-       "       -3,  0, -3, -1,  2,  4, -4,  1, -3, -3,  0, -5, -2, -4,  1,  1,  2,\n",
-       "       -4, -5,  2,  0, -4, -3, -2,  2,  1,  4, -4,  1, -5,  2,  4, -3, -2,\n",
-       "       -1,  3, -1, -4,  4, -5, -1,  2, -5,  2, -1, -4, -5, -2, -4,  4,  2,\n",
-       "        4,  2,  0, -3, -5,  2, -4,  1, -1,  0, -4, -2,  4,  3,  4, -1, -1,\n",
-       "        3,  3,  3, -3,  2,  2, -1,  1,  4,  4, -3, -4, -4, -3, -3, -3,  3,\n",
-       "        1,  3,  2,  3,  3, -5, -5, -1,  1,  4,  2,  4, -3, -5, -1, -5,  3,\n",
-       "       -2, -5, -1,  0,  3, -5,  0, -2, -1, -3,  4, -1, -2,  1,  1,  1,  4,\n",
-       "        0,  0, -5, -3,  3,  3, -4,  2, -5, -2,  1, -3,  0, -4,  3,  0, -3,\n",
-       "       -3,  1,  0,  1, -3,  2,  0,  4,  0,  3, -3,  3,  4,  2,  1, -5, -2,\n",
-       "       -5,  4, -5,  4,  1, -1,  1,  2, -1,  3, -5,  2,  1,  2, -4, -2,  4,\n",
-       "       -2,  4, -1, -4,  3,  4,  3, -1,  3, -3, -4, -4, -2, -3,  4,  2, -5,\n",
-       "        3, -3,  0, -4,  0,  1, -5, -1,  1,  3,  4,  1,  4,  3, -1,  0,  2,\n",
-       "       -5,  4, -1, -3, -1,  3,  0,  1, -4,  4, -3,  1,  2,  4, -5, -3,  2,\n",
-       "        2, -5, -3, -4, -3,  2, -5,  1, -4, -4, -3, -2,  3,  2,  1,  4, -4,\n",
-       "        0, -2,  2, -5,  1, -1, -1, -5,  1,  3,  2,  3, -5, -3,  0,  0,  1,\n",
-       "        3, -5, -1, -4, -2,  2,  4, -4,  0,  1, -2, -5, -4,  4, -5,  0,  1,\n",
-       "       -4,  2, -1, -3,  3, -1,  2,  3, -3,  0, -1,  0,  1, -3, -3,  4,  4,\n",
-       "       -2,  3, -1, -3, -5,  1, -1, -3, -2,  2,  2,  2,  1, -3, -4,  3,  0,\n",
-       "       -4, -5,  3,  2,  4,  0,  4,  0, -2,  4, -2,  2, -1,  2, -3, -1,  2,\n",
-       "       -1,  4,  0, -3, -2,  1,  2,  3, -4, -3,  2,  0, -1,  0,  3, -5,  1,\n",
-       "       -5, -5, -2, -3,  4, -2, -1,  1, -2,  1,  0, -5,  3, -2])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -142,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mira",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -156,12 +104,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
